fix: Chrome not wrapping

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,6 +47,10 @@ body {
 
 .page {
   background-color: $page-bgc;
+  // FIX: Since bootstrap uses border-box, but has no border, we can
+  // use padding-box & nothing will change in its content size if we
+  // have borders or not. Changing it will just bug things
+  box-sizing: padding-box;
   padding-bottom: $page-padding-unit;
   padding-top: $page-padding-unit;
 }
@@ -116,7 +120,6 @@ h3 {
   .page {
     border: $page-border;
     box-shadow: $page-box-shadow;
-    box-sizing: content-box !important;
     margin-bottom: $page-margin-unit;
     margin-top: $page-margin-unit;
 }
@@ -155,13 +158,12 @@ h3 {
 // 2. medium devices
 // 3. small devices
 // x-small & xx-small don't use a border
-@media (min-width: map-get($large-devices, "min")) and (max-width: map-get($large-devices, "min") + $page-bw*2),
-(min-width: map-get($medium-devices, "min")) and (max-width: map-get($medium-devices, "min") + $page-bw*2),
-(min-width: map-get($small-devices, "min")) and (max-width: map-get($small-devices, "min") + $page-bw*2)
+@media (min-width: map-get($large-devices, "min")) and (max-width: map-get($large-devices, "min") - 1 + $page-bw*2),
+(min-width: map-get($medium-devices, "min")) and (max-width: map-get($medium-devices, "min") - 1 + $page-bw*2),
+(min-width: map-get($small-devices, "min")) and (max-width: map-get($small-devices, "min") - 1 + $page-bw*2)
 {
   .page {
     border-width: 0;
-    box-sizing: border-box;     // Fix: No more horizontal scroll
   }
 }
 
